app/assets/stylesheets/components/_card-item.scss
.booking-show-card {
  overflow: hidden;
  height: 300px;
  background: white;
  border: 3px solid #000;
  display: flex;
}

.card-category {
  background-size: cover;
  background-position: center;
  height: 250px;
  display: flex;
  // justify-content: center;
  align-items: center;
  color: black;
  font-family: 'Montserrat', sans-serif;
  // font-size: 16px;
  // font-weight: bold;
  // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
  // box-shadow: 0 0 15px $blue;
  border-radius: 5px;
  margin: 20px;
}

.card-category ul {
  list-style: none;
}

.cards {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 16px;
  margin: 20px 50px 20px 50px;
  overflow: hidden;
  height: 300px;
  background: white;
  border: 3px solid black;
}

.cards li {
  list-style: none;
}

// .user-profile-card {
//   // box-shadow: 2px 2px 10px rgba(128, 128, 128, 0.568);
//   display: flex;
//   align-items: center;
// }

// // Smallest device
// @media (min-width: 100px) and (max-width: 575px) {
//   .cards {
//     grid-template-columns: 1fr;
//   }
// }

// // Small devices (landscape phones, 576px and up)
// @media (min-width: 576px) {
//   .cards {
//     grid-template-columns: 1fr;
//   }
// }

// // Medium devices (tablets, 768px and up)
// @media (min-width: 768px) {
//   .cards {
//     grid-template-columns: 1fr 1fr;
//   }
// }

// // Large devices (desktops, 992px and up)
// @media (min-width: 992px) {
//   .cards {
//     grid-template-columns: 1fr 1fr 1fr;
//   }
// }

// // Extra large devices (large desktops, 1200px and up)
// @media (min-width: 1200px) {
//   .cards {
//     grid-template-columns: 1fr 1fr 1fr;
//   }
// }

